# tinyusb

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  devices.cmake  hosts.cmake  options.cmake
src/portable/bridgetek/ft9xx/: CMakeLists.txt
src/portable/chipidea/ci_hs/: CMakeLists.txt
src/portable/dialog/da146xx/: CMakeLists.txt
src/portable/ehci/: CMakeLists.txt
src/portable/espressif/esp32sx/: CMakeLists.txt
src/portable/mentor/musb/: CMakeLists.txt
src/portable/microchip/pic32mz/: CMakeLists.txt
src/portable/microchip/samd/: CMakeLists.txt
src/portable/microchip/samg/: CMakeLists.txt
src/portable/microchip/samx7x/: CMakeLists.txt
src/portable/mindmotion/mm32/: CMakeLists.txt
src/portable/nordic/nrf5x/: CMakeLists.txt
src/portable/nuvoton/nuc120/: CMakeLists.txt
src/portable/nuvoton/nuc121/: CMakeLists.txt
src/portable/nuvoton/nuc505/: CMakeLists.txt
src/portable/nxp/khci/: CMakeLists.txt
src/portable/nxp/lpc17_40/: CMakeLists.txt
src/portable/nxp/lpc_ip3511/: CMakeLists.txt
src/portable/nxp/transdimension/: CMakeLists.txt
src/portable/ohci/: CMakeLists.txt
src/portable/raspberrypi/pio_usb/: CMakeLists.txt
src/portable/raspberrypi/rp2040/: CMakeLists.txt
src/portable/renesas/usba/: CMakeLists.txt
src/portable/sony/cxd56/: CMakeLists.txt
src/portable/st/stm32_fsdev/: CMakeLists.txt
src/portable/st/synopsys/: CMakeLists.txt
src/portable/sunxi/: CMakeLists.txt
src/portable/synopsys/dwc2/: CMakeLists.txt
src/portable/template/: CMakeLists.txt
src/portable/ti/msp430x5xx/: CMakeLists.txt
(+1 files in other folders)
